--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "dependencies": {
-    "uview-plus": "^3.6.18",
-    "uview-ui": "^2.0.38"
+    "@dcloudio/uni-ui": "^1.5.11",
+    "clipboard": "^2.0.11",
+    "dayjs": "^1.11.19"
   },
   "devDependencies": {
     "sass": "^1.96.0",
-    "sass-loader": "10.1.1"
+    "sass-loader": "10"
   }
 }
